Bat sheva update - no conflict

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
    <h1>This is Conflicts Project</h1> 
    <p>Michals project</p>
+   <p>This is Bat sheva first update (no conflict)</p>
 </body>
 </html>
