Bat sheva update outo merg

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
    <h1>This is Conflicts Project</h1> 
    <p>Michals project</p>
    <p>This is Bat sheva first update (no conflict)</p>
+   <p>Bat sheva tring to conflict (auto merg)</p>
 </body>
 </html>
