michals update (conflict)

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
    <p>Michals project</p>
    <p>This is Bat sheva first update (no conflict)</p>
    <p>Bat sheva tring to conflict (auto merg)</p>
+   <p>Michals trying to merge (conflict)</p>
 </body>
 </html>
